force-app/main/default/objects/DeployResultComponent__c/DeployResultComponent__c.object-meta.xml
<CustomObject>
    <label>Deploy Result Component</label>
    <nameField>
        <displayFormat>DEC-{000000}</displayFormat>
        <label>Component ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deploy Result Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>