force-app/main/default/objects/DeployResultComponent__c/fields/Changed__c.field-meta.xml
<CustomField>
    <fullName>Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the component was changed as part of this deployment.</description>
    <label>Changed</label>
    <type>Checkbox</type>
</CustomField>