force-app/main/default/objects/DeployResultComponent__c/fields/ColumnNumber__c.field-meta.xml
<CustomField>
    <fullName>ColumnNumber__c</fullName>
    <description>Column number trhowing the error</description>
    <label>Column Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>