force-app/main/default/objects/DeployResultComponent__c/fields/ComponentType__c.field-meta.xml
<CustomField>
    <fullName>ComponentType__c</fullName>
    <description>Metadata type of the component (e.g., ApexClass, LightningComponentBundle).</description>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CallCenter</fullName>
                <label>☎️ Call Center</label>
            </value>
            <value>
                <fullName>ApexTrigger</fullName>
                <label>⚙️ Apex Trigger</label>
            </value>
            <value>
                <fullName>GenerativeAIPromptTemplateActivation</fullName>
                <label>⚡ Gen AI Prompt Template Activation</label>
            </value>
            <value>
                <fullName>LightningBolt</fullName>
                <label>⚡ Lightning Bolt</label>
            </value>
            <value>
                <fullName>ApprovalProcess</fullName>
                <label>✅ Approval Process</label>
            </value>
            <value>
                <fullName>SendAction</fullName>
                <label>✉️ Send Action</label>
            </value>
            <value>
                <fullName>ValidationRule</fullName>
                <label>✔️ Validation Rule</label>
            </value>
            <value>
                <fullName>LightningExperienceTheme</fullName>
                <label>✨ Lightning Experience Theme</label>
            </value>
            <value>
                <fullName>CustomHelpMenuSection</fullName>
                <label>❓ Custom Help Menu Section</label>
            </value>
            <value>
                <fullName>Extension</fullName>
                <label>➕ Extension</label>
            </value>
            <value>
                <fullName>GlobalValueSet</fullName>
                <label>🌍 Global Value Set</label>
            </value>
            <value>
                <fullName>SiteDotCom</fullName>
                <label>🌍 Site.com</label>
            </value>
            <value>
                <fullName>RedirectWhitelistUrl</fullName>
                <label>🌐 Allow URL for Redirects</label>
            </value>
            <value>
                <fullName>Network</fullName>
                <label>🌐 Network</label>
            </value>
            <value>
                <fullName>AuraDefinitionBundle</fullName>
                <label>🌟 Aura Component Bundle</label>
            </value>
            <value>
                <fullName>CommunityTemplateDefinition</fullName>
                <label>🌩️ Lightning Community Template</label>
            </value>
            <value>
                <fullName>FlexiPage</fullName>
                <label>🌩️ Lightning Page</label>
            </value>
            <value>
                <fullName>DigitalExperienceBundle</fullName>
                <label>🎁 Digital Experience Bundle</label>
            </value>
            <value>
                <fullName>Scontrol</fullName>
                <label>🎛️ S-Control</label>
            </value>
            <value>
                <fullName>CommunityThemeDefinition</fullName>
                <label>🎨 Lightning Community Theme</label>
            </value>
            <value>
                <fullName>ApexComponent</fullName>
                <label>🎨 Visualforce Component</label>
            </value>
            <value>
                <fullName>Role</fullName>
                <label>🎭 Role</label>
            </value>
            <value>
                <fullName>EnablementMeasure</fullName>
                <label>🎯 Enablement Measures</label>
            </value>
            <value>
                <fullName>RecommendationStrategy</fullName>
                <label>🎯 Recommendation Strategy</label>
            </value>
            <value>
                <fullName>HomePageComponent</fullName>
                <label>🏠 Home Page Component</label>
            </value>
            <value>
                <fullName>CustomLabel</fullName>
                <label>🏷️ Custom Label</label>
            </value>
            <value>
                <fullName>PlatformEventChannelMember</fullName>
                <label>👤 Platform Event Channel Member</label>
            </value>
            <value>
                <fullName>SharingOwnerRule</fullName>
                <label>👤 Sharing Owner Rule</label>
            </value>
            <value>
                <fullName>UserProvisioningConfig</fullName>
                <label>👤 User Provisioning Config</label>
            </value>
            <value>
                <fullName>Group</fullName>
                <label>👥 Group</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>