force-app/main/default/objects/DeployResultComponent__c/fields/Created__c.field-meta.xml
<CustomField>
    <fullName>Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the component was newly created in the deployment.</description>
    <label>Created</label>
    <type>Checkbox</type>
</CustomField>