force-app/main/default/objects/DeployResultComponent__c/fields/Deleted__c.field-meta.xml
<CustomField>
    <fullName>Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the component was deleted in the deployment.</description>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>