force-app/main/default/objects/DeployResultComponent__c/fields/DeployResult__c.field-meta.xml
<CustomField>
    <fullName>DeployResult__c</fullName>
    <description>Lookup to the parent deployment result record.</description>
    <label>Deploy Result</label>
    <referenceTo>DeployResult__c</referenceTo>
    <relationshipLabel>Deploy Result Components</relationshipLabel>
    <relationshipName>DeployResultComponents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>