force-app/main/default/objects/DeployResultComponent__c/fields/FileName__c.field-meta.xml
<CustomField>
    <fullName>FileName__c</fullName>
    <description>File path of the component within the deployment package.</description>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>