force-app/main/default/objects/DeployResultComponent__c/fields/ForPackageManifestFile__c.field-meta.xml
<CustomField>
    <fullName>ForPackageManifestFile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if this entry refers to the package.xml manifest file.</description>
    <label>For Package Manifest File</label>
    <type>Checkbox</type>
</CustomField>