force-app/main/default/objects/DeployResultComponent__c/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <description>API name of the component being deployed.</description>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>