force-app/main/default/objects/DeployResultComponent__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <description>Component Id</description>
    <label>Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>