force-app/main/default/objects/DeployResultComponent__c/fields/KnownPackagingProblem__c.field-meta.xml
<CustomField>
    <fullName>KnownPackagingProblem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Known Packaging Problem</description>
    <label>Known Packaging Problem</label>
    <type>Checkbox</type>
</CustomField>