force-app/main/default/objects/DeployResultComponent__c/fields/Linenumber__c.field-meta.xml
<CustomField>
    <fullName>Linenumber__c</fullName>
    <description>Line number throwing error</description>
    <label>Line Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>