force-app/main/default/objects/DeployResultComponent__c/fields/Problem__c.field-meta.xml
<CustomField>
    <fullName>Problem__c</fullName>
    <description>Problem encountered</description>
    <label>Problem</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>