force-app/main/default/objects/DeployResultComponent__c/fields/ProblemType__c.field-meta.xml
<CustomField>
    <fullName>ProblemType__c</fullName>
    <description>Problem Type</description>
    <label>Problem Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>