force-app/main/default/objects/DeployResultComponent__c/fields/RequiresProductionTestRun__c.field-meta.xml
<CustomField>
    <fullName>RequiresProductionTestRun__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requires Prodcution Test Run</description>
    <label>Requires Production Test Run</label>
    <type>Checkbox</type>
</CustomField>