force-app/main/default/objects/DeployResultComponent__c/fields/ResultDisplay__c.field-meta.xml
<CustomField>
    <fullName>ResultDisplay__c</fullName>
    <description>Result</description>
    <formula>IF(Success__c, &quot;✅ Succeeded&quot;, &quot;❌ Failed&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Result</label>
    <type>Text</type>
</CustomField>