force-app/main/default/objects/DeployResultComponent__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Component Status</description>
    <formula>IF(Created__c,
  &quot;🆕 Created&quot;,
  IF(Changed__c,
    &quot;✏️ Changed&quot;,
    IF(Deleted__c,
      &quot;🗑️ Deleted&quot;,
      IF(warning__c,
        &quot;⚠️ Warning&quot;,
        &quot;🟰 None&quot;
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>