force-app/main/default/objects/DeployResultComponent__c/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this specific component was deployed successfully.</description>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>