force-app/main/default/objects/DeployResultComponent__c/fields/warning__c.field-meta.xml
<CustomField>
    <fullName>warning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>the component was deployed with warnings.</description>
    <label>warning</label>
    <type>Checkbox</type>
</CustomField>