force-app/main/default/objects/DeployResultComponent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ResultDisplay__c</columns>
    <columns>ComponentType__c</columns>
    <columns>FullName__c</columns>
    <columns>Status__c</columns>
    <columns>DeployResult__c</columns>
    <columns>RequiresProductionTestRun__c</columns>
    <columns>ProblemType__c</columns>
    <columns>Problem__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>