force-app/main/default/objects/DeployResultComponent__c/listViews/DeployLWCComponents.listView-meta.xml
<ListView>
    <fullName>DeployLWCComponents</fullName>
    <columns>NAME</columns>
    <columns>ResultDisplay__c</columns>
    <columns>ComponentType__c</columns>
    <columns>FullName__c</columns>
    <columns>Status__c</columns>
    <columns>DeployResult__c</columns>
    <columns>RequiresProductionTestRun__c</columns>
    <columns>ProblemType__c</columns>
    <columns>Problem__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ComponentType__c</field>
        <operation>equals</operation>
        <value>LightningComponentBundle</value>
    </filters>
    <label>LWC Components</label>
</ListView>