force-app/main/default/objects/DeployResultComponent__c/listViews/DeploySucceeded.listView-meta.xml
<ListView>
    <fullName>DeploySucceeded</fullName>
    <columns>NAME</columns>
    <columns>ResultDisplay__c</columns>
    <columns>ComponentType__c</columns>
    <columns>FullName__c</columns>
    <columns>Status__c</columns>
    <columns>DeployResult__c</columns>
    <columns>RequiresProductionTestRun__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Success__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Succeeded</label>
</ListView>